fix: show scrollbar

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -2,7 +2,7 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "Quantico", sans-serif;
-  scrollbar-width: none;
+  /* scrollbar-width: none; */
 }
 
 /* Chrome, Safari, Edge */
@@ -18,11 +18,32 @@ input[type="number"] {
 }
 
 /* Hide scrollbar for Chrome, Safari, and Opera */
-body::-webkit-scrollbar {
+/* body::-webkit-scrollbar {
   display: none;
-}
+} */
 
 /* Hide scrollbar for Firefox */
-body {
+/* body {
   scrollbar-width: none;
+} */
+/* Apply to the whole page, or a specific scrollable container */
+html {
+  /* For Firefox */
+  scrollbar-width: thin;
+  scrollbar-color:  #080808 #858585; 
+}
+
+/* For Chrome, Edge, and Safari */
+html::-webkit-scrollbar {
+  width: 12px; /* Width of the vertical scrollbar */
+}
+
+html::-webkit-scrollbar-track {
+  background: #858585; /* Color of the tracking area */
+}
+
+html::-webkit-scrollbar-thumb {
+  background: #080808; /* Color of the scroll thumb */
+  border-radius: 20px; /* Rounded edges of the thumb */
+  border: 3px solid #858585; /* Creates a clean gap around the thumb */
 }
